# Ts3ScreenShare

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.2f23706  CMakeLists.txt.user.f409478  main.cpp
include/: plugin.h
include/capture/: avcodec.h  avinput.h  screen_capture.h  swscontext.h
include/network/: NetworkHelper.h  udp_client.h
include/network/packets/: AckPacket.h  CreateWindowPacket.h  FlatFramePacket.h  LoginPacket.h  StartStreamPacket.h  StartWatchingPacket.h  StopStreamPacket.h  StopWatchingPacket.h
include/window/: sdl_renderer.h  sdl_texture.h  sdl_window.h  video_window.h
src/: plugin.cpp
src/capture/: avcodec.cpp  avinput.cpp  screen_capture.cpp  swscontext.cpp
src/network/: udp_client.cpp
src/window/: sdl_renderer.cpp  sdl_texture.cpp  sdl_window.cpp  video_window.cpp
